# patchelf

./: .travis.yml  CMakeLists.txt
cmake/: page-size.cmake  tests.cmake
